# Graph

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  ARQUITECTURA_Y_PLAN.md  CLI_COMMANDS.md  DEMO_COMPUTER_USE_VISUAL.md  DEPLOYMENT_VERCEL_SUPABASE.md  DOBLE_CONEXION.md  PLAN_AGENTE_NAVEGADOR.md  PLAN_DEMO_COMPUTER_USE_VISUAL.md  PLAN_IMPLEMENTACION_COMPUTER_USE_VISUAL.md  README.md  SELF_IMPROVEMENT_ARCHITECTURE.md  architecture-infrastructure.md  como-funciona-el-sistema.md  package-lock.json  package.json  requirements.txt  vercel.json
.claude/: launch.json
api/: index.js  (+1 more)
bounded/miracle-ai/: README.md  index.py  pyproject.toml
bounded/miracle-ai/src/miracle_agent/: cli.py  config.py  context.py
bounded/miracle-ai/src/miracle_agent/app/: __init__.py  web_app.py
bounded/miracle-ai/src/miracle_agent/features/chat/: __init__.py  api.py  contracts.py  service.py
bounded/miracle-ai/src/miracle_agent/features/notes/: __init__.py  api.py  contracts.py  service.py  session_store.py
bounded/miracle-ai/src/miracle_agent/features/runtime/: __init__.py  api.py
bounded/miracle-ai/src/miracle_agent/features/voice/: api.py  contracts.py  service.py
bounded/miracle-ai/src/miracle_agent/features/voice_orchestration/: __init__.py  api.py  contracts.py  service.py  session_store.py
bounded/miracle-ai/src/miracle_agent/integrations/deepgram/: streaming.py
bounded/miracle-ai/src/miracle_agent/web/: app.js  index.html  styles.css  voice.html  voice.js
bounded/miracle-ai/workspaces/: README.md
bounded/miracle-ai/workspaces/openclaw/agent/: AGENTS.md
(+259 files in other folders)
